--- a/package.json
+++ b/package.json
@@ -32,30 +32,33 @@
     "test-browserstack": "wdio wdio.browserstack.conf.ts",
     "test-lambdatest": "wdio wdio.lambdatest.conf.ts",
     "test-local": "wdio  wdio.local.conf.ts",
-    "test-mobile": "wdio wdio.appium.conf.ts"
+    "test-mobile": "wdio wdio.appium.conf.ts",
+    "wdio": "wdio run ./wdio.conf.ts"
   },
   "devDependencies": {
-    "@wdio/allure-reporter": "^8.1.2",
+    "@badisi/wdio-harness": "^2.0.1",
+    "@wdio/allure-reporter": "^8.3.5",
     "@wdio/appium-service": "^8.1.3",
     "@wdio/browserstack-service": "^8.1.3",
-    "@wdio/cli": "^8.1.3",
-    "@wdio/cucumber-framework": "^8.1.2",
+    "@wdio/cli": "^8.3.10",
+    "@wdio/cucumber-framework": "^8.3.0",
     "@wdio/globals": "^8.1.3",
     "@wdio/junit-reporter": "^8.1.2",
-    "@wdio/local-runner": "^8.1.3",
+    "@wdio/local-runner": "^8.3.10",
     "@wdio/sauce-service": "^8.1.3",
     "@wdio/selenium-standalone-service": "^8.1.2",
-    "@wdio/spec-reporter": "^8.1.2",
+    "@wdio/spec-reporter": "^8.3.0",
     "allure-commandline": "^2.20.1",
+    "chromedriver": "^110.0.0",
     "eslint": "^8.31.0",
     "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4",
-    "wdio-chromedriver-service": "^8.0.1",
-    "wdio-wait-for": "^3.0.1",
+    "typescript": "^4.9.5",
+    "wdio-chromedriver-service": "^8.1.1",
+    "wdio-wait-for": "^3.0.2",
     "webdriverio": "^8.1.3",
     "xunit-viewer": "^7.2.0"
   },
